styles: fixed margin spacing for desktop on hero image

--- a/public/sass/partials/hero.scss
+++ b/public/sass/partials/hero.scss
@@ -30,3 +30,9 @@
     }
   }
 }
+
+@media only screen and (min-width: 993px) {
+  .pic{
+      margin-top: 15vh;
+  }
+}
